test/libsolidity/syntaxTests/nameAndTypeResolution/512_library_function_without_implementation_internal.sol
library L {
    function f() internal;
}
// ----
// TypeError 9231: (16-38='function f() internal;'): Library functions must be implemented if declared.
